# tomatoclock

./: .clang-format  .clang-format.txt  .gitignore  .qmake.stash  CMakeLists.txt  ClassDiagram.cd  ClockSql.db  LonTypeDefines.h  README.md  TimeStatus.hpp  TomatoClock.sln  TomatoClock.vcxproj  clockoptions.hpp  displayclockbase.h  displayclockwidget.h  displayclockwidget.h.autosave  img.qrc  main-冲突-LordLon_Win10.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  qstringhash.h  settingfileoperations.cpp  settingfileoperations.h  settingwidget.cpp  settingwidget.h  settingwidget.ui  temp.cpp  temp.h  temp.ui  temp.ui.autosave  tomatoclock.pro  tomatoclocktimer.cpp  tomatoclocktimer.h  ui_settingwidget.h  ui_temp.h
Translate/: Translate.cpp  Translate.vcxproj
clock_database/: DataStructure.hpp  TodayData.hpp.autosave  clocksql.hpp
clock_main_widget/: clockmainwidget.cpp  clockmainwidget.h
clock_small_window/: clocksmallwindow.cpp  clocksmallwindow.h  progresswidget.cpp  progresswidget.h  toolswidget.cpp  toolswidget.h
clock_subwidgets/: addlabelwidget.cpp  addlabelwidget.h  addtargetwidget.cpp  addtargetwidget.h  chartswidget.cpp  chartswidget.h  clockdisplaywidget.cpp  clockdisplaywidget.h  clockrunningwidget.cpp  clockrunningwidget.h  customslicewithvalue.h  labelsandtargetswidget.cpp  labelsandtargetswidget.h  piecharttest.hpp  targetswidget-冲突-LordLon_Win10.cpp  targetswidget.cpp  targetswidget.h  targetwidget.cpp  targetwidget.h
lon_widget/: autodeletewidgetpointer.hpp  button.hpp  listwidget.hpp  lon_widget.pri  lon_widget.qrc  lon_widget.vcxproj  lon_widget.vcxproj.filters  messagebox.hpp  titlebar.hpp  widget.hpp
src/app/: main.cpp
src/app/Translate/: Translate.cpp  Translate.h  Translate.pri  Translate.qrc  main.cpp
src/gui/: displayclockbase.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qstringhash.h  settingfileoperations.cpp  settingfileoperations.h  settingwidget.cpp  settingwidget.h  settingwidget.ui  temp.cpp  temp.h  temp.ui  tomatoclocktimer.cpp  tomatoclocktimer.h
src/gui/clock_main_widget/: clockmainwidget.cpp  clockmainwidget.h
src/gui/clock_small_window/: clocksmallwindow.cpp  clocksmallwindow.h  progresswidget.cpp  progresswidget.h  toolswidget.cpp  toolswidget.h
src/gui/clock_subwidgets/: addlabelwidget.cpp  addlabelwidget.h  addtargetwidget.cpp  addtargetwidget.h  chartswidget.cpp  chartswidget.h  clockdisplaywidget.cpp  clockdisplaywidget.h  clockrunningwidget.cpp  clockrunningwidget.h  customslicewithvalue.h  labelsandtargetswidget.cpp  labelsandtargetswidget.h  piecharttest.hpp  targetwidget.cpp  targetwidget.h
src/gui/lon_widget/: CMakeLists.txt  autodeletewidgetpointer.hpp  button.hpp  listwidget.hpp  lon_widget.pri  lon_widget.qrc  menu.hpp  messagebox.hpp  titlebar.hpp  widget.hpp
src/utility/: LonTypeDefines.h  TimeStatus.hpp  clockoptions.hpp  qstringhash.h  tomatoclocktimer.cpp  tomatoclocktimer.h
src/utility/clock_database/: DataStructure.hpp  clocksql.hpp
user/: setting.json
